CheckIn: Fix bugs in the plugin "org.eclipse.birt.report.data.oda.xml" detected by FindBugs.